--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3fb12d0b-9a2a-4a1c-9449-a4bf7cfea97f",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d56c7e95-01fc-4b43-894f-0ff6339245e5",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7d9f9409-2e0e-4bb5-be86-f490156e2545",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "564c7aea-a5a0-4d7d-ad1e-5d62fd367f5f",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9b7313fe-d6f3-4eae-80c4-93fdd0e8fe59",
    "metadata": {},
    "outputs": [
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d8c31a87-88c1-47d5-ae27-d3ad690ca2b8",
    "metadata": {},
    "outputs": [
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e5bf7c4f-fd2d-4901-b5dd-36c9ecefccc9",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7120558d-5461-4f32-969c-e88817487bf5",
    "metadata": {},
    "outputs": [],
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "49cd6dfe-5e67-4253-9e6c-f4d6e2fbb918",
    "metadata": {},
    "outputs": [],
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6a4155d5-2771-4909-801d-1c758e0324a1",
    "metadata": {},
    "outputs": [],
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8f5f47db-5f35-4a11-a59d-f7c8194ec4cb",
    "metadata": {},
    "outputs": [],
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2198ffa7-0e06-4430-b988-3166e33b65f4",
    "metadata": {},
    "outputs": [],
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b44fea10-6753-46c9-90bb-76aee9111607",
    "metadata": {},
    "outputs": [],
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "25636d68-933c-497b-a1e0-56dc5c3bc7ac",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2056,7 @@
        "[1389 rows x 30 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "28b49267-efa0-4ba9-9042-f7dd5f17de4e",
    "metadata": {},
    "outputs": [],
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "40bc2deb-6de1-450c-abf0-4ecae2c5ca27",
    "metadata": {},
    "outputs": [],
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4f4bd9f0-1fe1-4b51-8179-1733e9542305",
    "metadata": {},
    "outputs": [],
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dff959c3-646e-4aa8-93ea-ac32dc0f86bb",
    "metadata": {},
    "outputs": [],
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6f6ea030-17c1-4658-a6b1-d2e4dcdc2372",
    "metadata": {},
    "outputs": [],
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b1f965d9-1198-4108-80c7-354e5e22652a",
    "metadata": {},
    "outputs": [
@@ -2538,7 +2538,7 @@
        "RandomForestClassifier(min_samples_split=10, n_estimators=50, random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2550,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "69a7e5d4-e29c-49c1-9fe9-d2b9becc4335",
    "metadata": {},
    "outputs": [],
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "8828b502-d563-43cd-a406-af40495c564d",
    "metadata": {},
    "outputs": [],
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "d407bc8e-05fc-4bbc-a2c2-9441e5f73f4f",
    "metadata": {},
    "outputs": [],
@@ -2581,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "204a3470-e5d5-4401-a936-30f02e9326d4",
    "metadata": {},
    "outputs": [
@@ -2591,7 +2591,7 @@
        "0.6123188405797102"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2602,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "2972bf3d-cda6-4d27-a765-f027d7657710",
    "metadata": {},
    "outputs": [],
@@ -2613,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c1fdd697-4c7e-46e7-a4ea-1614b75ccd66",
    "metadata": {},
    "outputs": [
@@ -2669,7 +2669,7 @@
        "1           76  28"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "f38e35a0-f17a-401a-8ccc-e83837498227",
    "metadata": {},
    "outputs": [
@@ -2691,7 +2691,7 @@
        "np.float64(0.4745762711864407)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2704,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "19e6953b-3662-4de1-b8c4-fba2bcfabae1",
    "metadata": {},
    "outputs": [],
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d32bede5-53fd-449b-9615-852bbb7bbe19",
    "metadata": {},
    "outputs": [],
@@ -2726,7 +2726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "574fb518-a733-4c35-854b-191cefe1762b",
    "metadata": {},
    "outputs": [],
@@ -2746,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0ffacb6c-3a8d-4e5c-a2ec-066dcf913cb2",
    "metadata": {},
    "outputs": [
@@ -3134,7 +3134,7 @@
        "[68 rows x 38 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "c988a520-ec3b-46c2-8e1e-7981eba5c1e1",
    "metadata": {},
    "outputs": [
@@ -3158,7 +3158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kaka Tran\\AppData\\Local\\Temp\\ipykernel_16316\\4052147919.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\Kaka Tran\\AppData\\Local\\Temp\\ipykernel_19228\\1506800310.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  matches_rolling = matches.groupby(\"team\").apply(lambda x: rolling_averages(x, cols, new_cols))\n"
      ]
     }
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "e336c816-c229-41f7-af68-8e7275907952",
    "metadata": {},
    "outputs": [
@@ -3591,7 +3591,7 @@
        "[1317 rows x 38 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3602,7 +3602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "156979b1-ad35-4db7-987c-af4910f3c580",
    "metadata": {},
    "outputs": [],
@@ -3613,7 +3613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "e24a3592-9333-4fb6-b194-2a9eb3e576bf",
    "metadata": {},
    "outputs": [
@@ -4001,7 +4001,7 @@
        "[1317 rows x 38 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4012,7 +4012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "248936e0-febc-422f-a532-7a9827bb5627",
    "metadata": {},
    "outputs": [],
@@ -4023,7 +4023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6342b84c-f942-4151-9dea-eb5d607a7c33",
    "metadata": {},
    "outputs": [],
@@ -4047,7 +4047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "baf00a6c-e8e3-4c87-8e32-6aaa6d4205e6",
    "metadata": {},
    "outputs": [],
@@ -4057,7 +4057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "1cef91a4-1111-4fff-b08d-2c6c68f555f1",
    "metadata": {},
    "outputs": [
@@ -4067,7 +4067,7 @@
        "np.float64(0.625)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4078,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "2a5e5ae2-5200-46ef-8883-31253eb2b70e",
    "metadata": {},
    "outputs": [],
@@ -4089,7 +4089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "1621248c-4d89-4fba-8bcd-2138b5963a16",
    "metadata": {},
    "outputs": [
@@ -4169,80 +4169,93 @@
        "      <td>W</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-03-13</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Leicester City</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-03-05</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>Wolves</td>\n",
        "      <td>W</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
+       "      <th>430</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-03-16</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-03-14</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
+       "      <th>431</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-03-19</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Aston Villa</td>\n",
-       "      <td>W</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2022-04-04</td>\n",
-       "      <td>Arsenal</td>\n",
        "      <td>Crystal Palace</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-04-10</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>Leicester City</td>\n",
        "      <td>L</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
+       "      <th>433</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2022-04-09</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Brighton</td>\n",
+       "      <td>2022-04-20</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>Newcastle Utd</td>\n",
        "      <td>L</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    actual  predicted       date     team        opponent result\n",
-       "55       0          0 2022-01-23  Arsenal         Burnley      D\n",
-       "56       1          0 2022-02-10  Arsenal          Wolves      W\n",
-       "57       1          0 2022-02-19  Arsenal       Brentford      W\n",
-       "58       1          1 2022-02-24  Arsenal          Wolves      W\n",
-       "59       1          1 2022-03-06  Arsenal         Watford      W\n",
-       "60       1          1 2022-03-13  Arsenal  Leicester City      W\n",
-       "61       0          1 2022-03-16  Arsenal       Liverpool      L\n",
-       "62       1          0 2022-03-19  Arsenal     Aston Villa      W\n",
-       "63       0          0 2022-04-04  Arsenal  Crystal Palace      L\n",
-       "64       0          0 2022-04-09  Arsenal        Brighton      L"
+       "     actual  predicted       date            team         opponent result\n",
+       "55        0          0 2022-01-23         Arsenal          Burnley      D\n",
+       "56        1          0 2022-02-10         Arsenal           Wolves      W\n",
+       "57        1          0 2022-02-19         Arsenal        Brentford      W\n",
+       "58        1          1 2022-02-24         Arsenal           Wolves      W\n",
+       "59        1          1 2022-03-06         Arsenal          Watford      W\n",
+       "..      ...        ...        ...             ...              ...    ...\n",
+       "429       1          0 2022-03-05  Crystal Palace           Wolves      W\n",
+       "430       0          0 2022-03-14  Crystal Palace  Manchester City      D\n",
+       "431       1          0 2022-04-04  Crystal Palace          Arsenal      W\n",
+       "432       0          0 2022-04-10  Crystal Palace   Leicester City      L\n",
+       "433       0          0 2022-04-20  Crystal Palace    Newcastle Utd      L\n",
+       "\n",
+       "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined.head(10)"
+    "combined.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "id": "6311715e-2523-4732-becb-731a9dd664b2",
    "metadata": {},
    "outputs": [],
@@ -4250,13 +4263,18 @@
     "class MissingDict(dict):\n",
     "    __missing__ = lambda self, key: key\n",
     "\n",
-    "map_values = {\"Brighton and Hove Albion\": \"Brighton\", \"Manchester United\": \"Manchester Utd\", \"Newcastle United\": \"Newcastle Utd\", \"Tottenham Hotspur\": \"Tottenham\", \"West Ham United\": \"West Ham\", \"Wolverhampton Wanderers\": \"Wolves\"} \n",
+    "map_values = {\"Brighton and Hove Albion\": \"Brighton\",\n",
+    "                \"Manchester United\": \"Manchester Utd\",\n",
+    "                \"Newcastle United\": \"Newcastle Utd\",\n",
+    "                \"Tottenham Hotspur\": \"Tottenham\", \n",
+    "                \"West Ham United\": \"West Ham\", \n",
+    "                \"Wolverhampton Wanderers\": \"Wolves\"} \n",
     "mapping = MissingDict(**map_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "544d6d13-6ac5-42ea-b5ba-d43b53d2daa4",
    "metadata": {},
    "outputs": [],
@@ -4267,19 +4285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "42d5bd18-696d-4d1d-9522-ef3ae44d0324",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Gộp DataFrame với chính nó để lấy thông tin đối thủ của mỗi trận đấu\n",
-    "merged = combined.merge(combined, left_on=[\"date\", \"new_team\"], right_on=[\"date\", \"opponent\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "d4235824-e948-4815-ae0c-75d682e9c10a",
    "metadata": {},
    "outputs": [
     {
@@ -4543,18 +4550,20 @@
        "[262 rows x 13 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Gộp DataFrame với chính nó để lấy thông tin đối thủ của mỗi trận đấu\n",
+    "merged = combined.merge(combined, left_on=[\"date\", \"new_team\"], right_on=[\"date\", \"opponent\"])\n",
     "merged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "fdba9404-709f-4401-98f8-ccc0f9813f04",
    "metadata": {},
    "outputs": [
@@ -4567,7 +4576,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4580,10 +4589,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "48906c01-1c97-4c9f-b19e-f7b1444abfc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.675"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#độ chính xác của mô hình là\n",
     "27/40"
